RESOLVED FIXED319722
REGRESSION (290497@main): [iOS] Adjusting selection handles in Google search field causes page to autoscroll
https://bugs.webkit.org/show_bug.cgi?id=319722
Summary REGRESSION (290497@main): [iOS] Adjusting selection handles in Google search ...
Wenson Hsieh
Reported 2026-07-17 16:58:14 PDT
Attachments
Wenson Hsieh
Comment 1 2026-07-17 18:11:15 PDT
EWS
Comment 2 2026-07-18 09:11:08 PDT
Committed 317473@main (16a8a13f3916): <https://commits.webkit.org/317473@main> Reviewed commits have been landed. Closing PR #69696 and removing active labels.
EWS
Comment 3 2026-07-23 20:56:32 PDT
Committed 316606.229@safari-7625-branch (0d09b6a0991b): <https://commits.webkit.org/316606.229@safari-7625-branch> Reviewed commits have been landed. Closing PR #6103 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.